# stark-bot

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  FUTURE_UPGRADES.md  HOW_TO_USE_POLYMARKET.md  KEYSTORE_SERVER_PLAN.md  README.md  docker-compose.dev.yml
abis/: weth.json
config/: tokens.ron  web3_presets.ron
keystore-api/: PLAN.md
skills/: broadcast_transactions.md  dexscreener.md  discord.md  polymarket.md  polymarket_trading.md  swap.md  token_price.md  transfer.md  weth.md
skills/inactive/: eip8004-discover.md  eip8004-register.md  eip8004-reputation.md
stark-backend/: Cargo.toml
stark-backend/src/: config.rs  main.rs
stark-backend/src/ai/: mod.rs  openai.rs
stark-backend/src/ai/archetypes/: kimi.rs
stark-backend/src/ai/multi_agent/: mod.rs  orchestrator.rs  tools.rs  types.rs
stark-backend/src/ai/multi_agent/prompts/: explore.md  perform.md  plan.md
stark-backend/src/channels/: discord.rs  dispatcher.rs  mod.rs
stark-backend/src/controllers/: agent_settings.rs  api_keys.rs  auth.rs  dashboard.rs  health.rs  identity.rs  mod.rs  tx_queue.rs
stark-backend/src/db/: mod.rs  sqlite.rs
stark-backend/src/db/models/: chat_sessions.rs
stark-backend/src/db/tables/: agent_contexts.rs  api_keys.rs  bot_settings.rs  chat_sessions.rs  identities.rs  mod.rs
stark-backend/src/discord_hooks/: mod.rs
stark-backend/src/gateway/: mod.rs  protocol.rs
stark-backend/src/middleware/: session_auth.rs
stark-backend/src/models/: bot_settings.rs  session.rs
stark-backend/src/skills/: loader.rs
stark-backend/src/tools/: http_retry.rs  mod.rs  presets.rs  register.rs  types.rs
stark-backend/src/tools/builtin/: mod.rs  register_set.rs  token_lookup.rs  web3_function_call.rs  web3_tx.rs  web_fetch.rs  x402_fetch.rs  x402_rpc.rs
stark-backend/src/tools/builtin/cryptocurrency/: mod.rs  polymarket_trade.rs
stark-frontend/: dashboard.html  index.html  package-lock.json  package.json
stark-frontend/css/: styles.css
stark-frontend/js/: auth.js  dashboard.js
stark-frontend/src/: App.tsx
stark-frontend/src/components/chat/: ChatMessage.tsx  CommandMenu.tsx  DebugPanel.tsx
stark-frontend/src/components/layout/: MobileNavDrawer.tsx  Sidebar.tsx
stark-frontend/src/lib/: api.ts
stark-frontend/src/pages/: AgentChat.tsx  AgentSettings.tsx  ApiKeys.tsx  BotSettings.tsx  Identities.tsx  IdentityDetail.tsx  Login.tsx
