[package]
name = "stark-backend"
version = "0.3.2"
edition = "2024"
default-run = "stark-backend"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# Gateway WebSocket server
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Telegram integration
teloxide = { version = "0.12", features = ["macros"] }

# Slack integration
slack-morphism = { version = "2", features = ["hyper"] }

# Discord integration
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Concurrent state management
dashmap = "5"

# Regex for memory marker parsing
regex = "1"

# SIWE (Sign In With Ethereum) authentication and x402 payments
ethers = "2.0"
hex = "0.4"
rand = "0.8"
getrandom = "0.2"
base64 = "0.22"

# URL parsing
url = "2"

# Cron scheduling
cron = "0.12"

# Lazy static for global state
lazy_static = "1.4"

# Tools system
which = "5"

# Skills ZIP upload
zip = "0.6"

[[bin]]
name = "agent_test"
path = "src/bin/agent_test.rs"

[dev-dependencies]
tempfile = "3"
